PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/PerformProject__c.object-meta.xml
<CustomObject>
    <label>프로젝트 수행팀</label>
    <nameField>
        <displayFormat>PJ-{0000}</displayFormat>
        <label>Seq</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>