PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>프로젝트에 참여한 사원 이름</inlineHelpText>
    <label>사원 명</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>수행 프로젝트</relationshipLabel>
    <relationshipName>EmployeePerformPjt</relationshipName>
    <type>Lookup</type>
</CustomField>