PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/EmpNm__c.field-meta.xml
<CustomField>
    <fullName>EmpNm__c</fullName>
    <formula>Employee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사원명</label>
    <type>Text</type>
</CustomField>