PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/Final_Evaluation_YN__c.field-meta.xml
<CustomField>
    <fullName>Final_Evaluation_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>최종평가 여부</label>
    <type>Checkbox</type>
</CustomField>