PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/First_evaluation_YN__c.field-meta.xml
<CustomField>
    <fullName>First_evaluation_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>외주인력 대상 투입 30일 후 진행할 1차 평가 여부</description>
    <label>1차평가 여부</label>
    <type>Checkbox</type>
</CustomField>