PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/fm_BelongTo__c.field-meta.xml
<CustomField>
    <fullName>fm_BelongTo__c</fullName>
    <formula>IF( TEXT(Employee__r.Type__c) = &apos;내부직원&apos;,TEXT(Employee__r.Type__c), Employee__r.O_Company__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>소속</label>
    <type>Text</type>
</CustomField>