PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/fm_FromDate__c.field-meta.xml
<CustomField>
    <fullName>fm_FromDate__c</fullName>
    <formula>BLANKVALUE( InputDate__c ,  Project__r.StartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>시작일</label>
    <type>Date</type>
</CustomField>