PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/fm_Ratio__c.field-meta.xml
<CustomField>
    <fullName>fm_Ratio__c</fullName>
    <formula>Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>투입비율(숫자)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>