PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/fm_Term__c.field-meta.xml
<CustomField>
    <fullName>fm_Term__c</fullName>
    <formula>Text( InputDate__c ) &amp; &quot; ~ &quot; &amp;  TEXT(WithdrawDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수행기간</label>
    <type>Text</type>
</CustomField>