PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/fm_ToDate__c.field-meta.xml
<CustomField>
    <fullName>fm_ToDate__c</fullName>
    <formula>BLANKVALUE( WithdrawDate__c ,  Project__r.EndDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>종료일</label>
    <type>Date</type>
</CustomField>