PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/InputDate__c.field-meta.xml
<CustomField>
    <fullName>InputDate__c</fullName>
    <label>투입 일자</label>
    <type>Date</type>
</CustomField>