PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/IsPM__c.field-meta.xml
<CustomField>
    <fullName>IsPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM여부</label>
    <type>Checkbox</type>
</CustomField>