PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>프로젝트 명</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>프로젝트 수행팀</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>