PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <inlineHelpText>투입비율: 1%~100%</inlineHelpText>
    <label>투입비율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>