PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/WithdrawDate__c.field-meta.xml
<CustomField>
    <fullName>WithdrawDate__c</fullName>
    <label>철수 일자</label>
    <type>Date</type>
</CustomField>