PA_Education/TestMenifest/force-app/main/default/objects/PerformProject__c/fields/WorkDescription__c.field-meta.xml
<CustomField>
    <fullName>WorkDescription__c</fullName>
    <inlineHelpText>담당 업무를 간략히 기술한다.</inlineHelpText>
    <label>담당 업무</label>
    <type>TextArea</type>
</CustomField>